--- a/packages/moten-admin/index.html
+++ b/packages/moten-admin/index.html
@@ -2,9 +2,9 @@
 <html lang="zhCn">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="./logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>moten ADMIN</title>
+    <title>低代码平台 Moten</title>
   </head>
   <body>
     <div id="app"></div>
